infrastructure/k8s/posts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: posts
spec:
  containers:
  - name: posts
    image: post/services:0.0.1 # Image tag-name
    imagePullPolicy: Never
