infrastructure/k8s/comments-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: brokidev/comments
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: personal-docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-srv
spec:
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 3001
      targetPort: 3001
