infrastructure/k8s/moderation-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: brokidev/moderation
        ports:
        - containerPort: 3003
      imagePullSecrets:
      - name: personal-docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-ip-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 3003
      targetPort: 3003
