infrastructure/k8s/query-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: brokidev/query
        ports:
        - containerPort: 3002
      imagePullSecrets:
      - name: personal-docker-registry
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 3002
      targetPort: 3002
